Fixed a lot of alignment problems and fixed map

--- a/MySite/wwwroot/css/custom.css
+++ b/MySite/wwwroot/css/custom.css
@@ -92,11 +92,25 @@
 }
 
 #map {
-    width: auto;
+    width: 100%;
     height: 250px;
-    margin-top: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
+.btn {
+    padding: .5rem 1rem;
+    font-size: 1.25rem;
+    line-height: 1.5;
+    border-radius: .3rem;
+}
+
+.dropdown-item {
+    padding: .5rem 1rem;
+    font-size: 1.25rem;
+    line-height: 1.5;
+    border-radius: .3rem;
+}
 
 .hidden {
     display: none;
@@ -137,6 +151,18 @@ a > .svg {
 h1 {
     background-color: #B3C4C7;
     padding: 10px;
+}
+
+h4 {
+    font-weight: 700 !important;
+    font-size: 2.2rem !important;
+}
+
+h5 {
+    color: #154047 !important;
+    font-weight: 500 !important;
+    font-size: 2rem !important;
+    padding-top: 15px !important;
 }
 
 #address-heading {
